half of b2 cleaning commented

--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -380,7 +380,8 @@
    ],
    "source": [
     "#count number of - infinity quantity values in inventories\n",
-    "print(\"count number of - infinity quantity values in inventories:\", inventory_parts[inventory_parts.quantity == -np.inf].shape[0])"
+    "print(\n",
+    "    \"count number of - infinity quantity values in inventories:\", inventory_parts[inventory_parts.quantity == -np.inf].shape[0])"
    ]
   },
   {
@@ -539,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quantity Attribute seems to have expected values now, with minimum of 1 and maximum of 1440."
+    "Quantity Attribute seems to have expected values now, with minimum of 1 and maximum of 1440. Thus, our dataset is coherent"
    ]
   },
   {
@@ -715,32 +716,6 @@
     "largest_part_category = parts.groupby('part_cat_id').size().nlargest(20)\n",
     "#printing firt few entries of largest categories of parts\n",
     "largest_part_category.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 375,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'[13 27 17  4 10 24 41  2 28 45 38  3 36 16 48 37 29 47  1 42] not in index'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-375-d020d78fc8d5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlargest_part_category\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkind\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'barh'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mpart_categories\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlargest_part_category\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2677\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2678\u001b[0m             \u001b[1;31m# either boolean or fancy integer index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2679\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2680\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2681\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_frame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_getitem_array\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2721\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2722\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2723\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_convert_to_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2724\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2725\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_convert_to_indexer\u001b[1;34m(self, obj, axis, is_setter)\u001b[0m\n\u001b[0;32m   1325\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1326\u001b[0m                     raise KeyError('{mask} not in index'\n\u001b[1;32m-> 1327\u001b[1;33m                                    .format(mask=objarr[mask]))\n\u001b[0m\u001b[0;32m   1328\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1329\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mcom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_values_from_object\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: '[13 27 17  4 10 24 41  2 28 45 38  3 36 16 48 37 29 47  1 42] not in index'"
-     ]
-    }
-   ],
-   "source": [
-    "largest_part_category.plot(kind='barh', index= part_categories[largest_part_category.index.values].name)"
    ]
   },
   {
@@ -1448,75 +1423,99 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above we have value range and other descriptions of some attributes. However, object type attributes are not regarded in that dataframe. Let's study them seperately.\n",
-    "End Time and Start Time are clearly date objects and should be handeled accordingly:"
+    "Above we have value range and other descriptions of some attributes. However, object type attributes are not regarded in that data frame. Let's study them separately.\n",
+    "End Time and Start Time are clearly date objects and should be handled accordingly:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Description of passholder type:\n",
-      " count           132427\n",
+      "Description of passholder type\n",
+      "count           132427\n",
       "unique               4\n",
       "top       Monthly Pass\n",
       "freq             81304\n",
       "Name: Passholder Type, dtype: object \n",
       "\n",
-      "Values of passholher type:\n",
-      " ['Monthly Pass' 'Flex Pass' 'Walk-up' 'Staff Annual']\n"
+      "Values of passholher type\n",
+      "['Monthly Pass' 'Flex Pass' 'Walk-up' 'Staff Annual']\n"
      ]
     }
    ],
    "source": [
     "#description of passholder type\n",
-    "print(\"Description of passholder type:\\n\", bike_share_trip['Passholder Type'].describe(), '\\n')\n",
+    "print(\"Description of passholder type\")\n",
+    "print(bike_share_trip['Passholder Type'].describe(), '\\n')\n",
     "#unique values of passholder type\n",
-    "print(\"Values of passholher type:\\n\", bike_share_trip['Passholder Type'].unique())"
+    "print(\"Values of passholher type\")\n",
+    "print(bike_share_trip['Passholder Type'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Description of trip route category:\n",
-      " count      132427\n",
+      "Description of trip route category\n",
+      "count      132427\n",
       "unique          2\n",
       "top       One Way\n",
       "freq       119642\n",
       "Name: Trip Route Category, dtype: object \n",
       "\n",
-      "Values of trip route category:\n",
-      " ['Monthly Pass' 'Flex Pass' 'Walk-up' 'Staff Annual']\n"
+      "Values of trip route category\n",
+      "['Round Trip' 'One Way']\n"
      ]
     }
    ],
    "source": [
     "#description of Trip Route Category\n",
-    "print(\"Description of trip route category:\\n\",bike_share_trip['Trip Route Category'].describe(), '\\n')\n",
+    "print(\"Description of trip route category\")\n",
+    "print(bike_share_trip['Trip Route Category'].describe(), '\\n')\n",
     "#unique values of Trip Route Category\n",
-    "print(\"Values of trip route category:\\n\", bike_share_trip['Passholder Type'].unique())"
+    "print(\"Values of trip route category\")\n",
+    "print(bike_share_trip['Trip Route Category'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 457,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 30., 365.,   0.,  nan])"
+      ]
+     },
+     "execution_count": 457,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_share_trip['Plan Duration'].unique()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the dataset we have the following categorical variable:\n",
+    "Therefore, in the dataset we have the following categorical variables:\n",
     "<ul>\n",
     "    <li>Passholder Type: 4 categories ['Monthly Pass' 'Flex Pass' 'Walk-up' 'Staff Annual']. Describes Pass type a person taken a trip had</li>\n",
-    "    <li>Plan Duration</li>\n",
-    "    <li>Trip Route Category</li>\n",
+    "    <li>Plan Duration: 4 categories [0., 365., 30, nan] corresponds to passholder types ['Walk-up' 'Flex Pass' 'Monthly Pass'  'Staff Annual'] respectivly </li>\n",
+    "    <li>Trip Route Category: 2 categories ['Round Trip' 'One Way']</li>\n",
     "</ul>"
    ]
   },
@@ -1540,15 +1539,6 @@
     "#setting categorical columns\n",
     "categorical_cols = ['Passholder Type','Plan Duration', 'Trip Route Category']\n",
     "categorical_cols"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ToDO change catoegories dgeebi gza da parolis tipi"
    ]
   },
   {
