--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
        "4          Round Trip  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 461,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 462,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 462,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,19 +1537,51 @@
    ],
    "source": [
     "#setting categorical columns\n",
-    "categorical_cols = ['Passholder Type','Plan Duration', 'Trip Route Category']\n",
+    "categorical_cols = ['Passholder Type', 'Plan Duration', 'Trip Route Category']\n",
     "categorical_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 463,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Tranforming non-numerical columns to category in order to transform it afterwards\n",
-    "for cols in categorical_cols:\n",
-    "    bike_share_trip[cols] = bike_share_trip[cols].astype('category')"
+    "bike_share_trip[categorical_cols] = bike_share_trip[categorical_cols].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 464,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bike ID                        float64\n",
+       "Duration                         int64\n",
+       "End Time                        object\n",
+       "Ending Station ID              float64\n",
+       "Ending Station Latitude        float64\n",
+       "Ending Station Longitude       float64\n",
+       "Passholder Type               category\n",
+       "Plan Duration                 category\n",
+       "Start Time                      object\n",
+       "Starting Station ID            float64\n",
+       "Starting Station Latitude      float64\n",
+       "Starting Station Longitude     float64\n",
+       "Trip ID                          int64\n",
+       "Trip Route Category           category\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 464,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_share_trip.dtypes"
    ]
   },
   {
