--- a/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
+++ b/ADA2018-Homework-master/01 - Pandas and Data Wrangling/Exercise 1.ipynb
@@ -122,7 +122,6 @@
    "cell_type": "code",
    "execution_count": 210,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -151,7 +150,6 @@
    "cell_type": "code",
    "execution_count": 211,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -220,9 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 213,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -264,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -297,9 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -358,9 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -388,9 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -409,9 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -436,9 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -536,9 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -599,9 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -722,9 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -753,9 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 223,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -801,9 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 225,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -843,9 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -873,13 +845,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As we need to find the relation between Sets and Colors, we have to join 4 differents dataframe.\n",
+    "\n",
+    "We inner joined sets and inventory_sets to get the inventories_id corresponding to sets_id. Then we joined inventories sets and parts based on inventories_ids. Finally, we were able to catch the colors names and rgb code from colors dataframe."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 227,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -992,9 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 228,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1158,11 +1131,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To display the graph we used the previous data \"groupby_sets\" that references all the color names, RGB codes and count of dominance.\n",
+    "We display the bar with the good colors thanks to the RGB code."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 229,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1255,9 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1319,9 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 461,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1510,9 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": 462,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1548,7 +1521,6 @@
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1757,9 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 452,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1789,9 +1759,7 @@
   {
    "cell_type": "code",
    "execution_count": 456,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1821,9 +1789,7 @@
   {
    "cell_type": "code",
    "execution_count": 457,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1855,9 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1890,9 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": 464,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1926,9 +1888,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2219,9 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2343,9 +2301,7 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2602,9 +2558,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2628,9 +2582,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2651,9 +2603,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2686,9 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2761,9 +2709,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2958,9 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3001,9 +2945,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3073,9 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3150,7 +3090,6 @@
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -3188,9 +3127,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3224,9 +3161,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3259,9 +3194,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3305,9 +3238,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3354,9 +3285,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3413,7 +3342,6 @@
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3499,9 +3427,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3566,9 +3492,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3599,7 +3523,6 @@
    "cell_type": "code",
    "execution_count": 139,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3638,9 +3561,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3688,9 +3609,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3747,9 +3666,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -3777,9 +3694,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3828,9 +3743,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3879,7 +3792,6 @@
    "cell_type": "code",
    "execution_count": 242,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -3993,9 +3905,7 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4177,9 +4087,7 @@
   {
    "cell_type": "code",
    "execution_count": 248,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4225,7 +4133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
